force-app/main/default/objects/Business_Profile__c/Business_Profile__c.object-meta.xml
<CustomObject>
    <label>Business Profile</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Business Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>