force-app/main/default/objects/Business_Profile__c/fields/Anticipated_Sanctioned_Counterparties__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Sanctioned_Counterparties__c</fullName>
    <description>Whether the business anticipates dealing with sanctioned counterparties. Any &apos;Yes&apos; triggers compliance review.</description>
    <label>Anticipated Sanctioned Counterparties?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>