force-app/main/default/objects/Business_Profile__c/fields/Countries_Received_From__c.field-meta.xml
<CustomField>
    <fullName>Countries_Received_From__c</fullName>
    <description>Countries where funds will be received from.</description>
    <label>Countries Funds Will Be Received From</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>