force-app/main/default/objects/Business_Profile__c/fields/Currencies_or_Assets__c.field-meta.xml
<CustomField>
    <fullName>Currencies_or_Assets__c</fullName>
    <description>Currencies or digital assets required for transactions.</description>
    <label>Currencies or Assets Required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>