force-app/main/default/objects/Business_Profile__c/fields/Currencies_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Currencies_to_Receive__c</fullName>
    <description>Currencies the client will be receiving/buying in FX transactions.</description>
    <label>Currencies to Receive</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>