force-app/main/default/objects/Business_Profile__c/fields/Currencies_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Currencies_to_Send__c</fullName>
    <description>Currencies the client will be sending/selling in FX transactions.</description>
    <label>Currencies to Send</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>