force-app/main/default/objects/Business_Profile__c/fields/Expected_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Volume__c</fullName>
    <description>Expected annual transaction volume in base currency.</description>
    <label>Expected Annual Transaction Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>