force-app/main/default/objects/Business_Profile__c/fields/Expected_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Employees__c</fullName>
    <description>The expected number of employees the company will have.</description>
    <label>Expected Number of Employees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>