force-app/main/default/objects/Business_Profile__c/fields/High_Risk_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Jurisdiction__c</fullName>
    <description>Whether the business has exposure to high-risk jurisdictions.</description>
    <label>High-Risk Jurisdiction Exposure?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>