force-app/main/default/objects/Business_Profile__c/fields/High_Risk_Jurisdiction_Details__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Jurisdiction_Details__c</fullName>
    <description>List of high-risk countries and explanation of exposure.</description>
    <label>High-Risk Jurisdiction Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>