force-app/main/default/objects/Business_Profile__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>The industry of the company, sourced from Account.Industry picklist values.</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>