force-app/main/default/objects/Business_Profile__c/fields/Is_Regulated__c.field-meta.xml
<CustomField>
    <fullName>Is_Regulated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the company is a regulated financial institution.</description>
    <label>Is Regulated</label>
    <type>Checkbox</type>
</CustomField>