force-app/main/default/objects/Business_Profile__c/fields/Largest_Single_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Largest_Single_Transaction__c</fullName>
    <description>Largest single transaction expected in base currency.</description>
    <label>Largest Single Transaction Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>