force-app/main/default/objects/Business_Profile__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <description>Parent onboarding application this business profile belongs to.</description>
    <label>Onboarding Application</label>
    <referenceTo>Onboarding_Application__c</referenceTo>
    <relationshipLabel>Business Profiles</relationshipLabel>
    <relationshipName>Business_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>