force-app/main/default/objects/Business_Profile__c/fields/Primary_Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source_of_Funds__c</fullName>
    <description>Primary source of funds for the business operations.</description>
    <label>Primary Source of Funds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client_Funds</fullName>
                <label>Client Funds</label>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Operating_Revenue</fullName>
                <label>Operating Revenue</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>