force-app/main/default/objects/Business_Profile__c/fields/Products_and_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_and_Services__c</fullName>
    <description>Description of the company&apos;s products and services, customer base and industry.</description>
    <label>Products and Services</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>