force-app/main/default/objects/Business_Profile__c/fields/Purpose_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Account__c</fullName>
    <description>Reason why the account is being opened (e.g. hedging FX, managing cross-border payments, investing in digital assets, seeking advisory).</description>
    <label>Purpose of Account</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>