force-app/main/default/objects/Business_Profile__c/fields/Regulatory_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Jurisdiction__c</fullName>
    <description>The jurisdiction or country where the company is regulated.</description>
    <label>Regulatory Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>