force-app/main/default/objects/Business_Profile__c/fields/Regulatory_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Licence_Number__c</fullName>
    <description>The regulatory licence or registration number issued to the company.</description>
    <label>Regulatory Licence Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>