force-app/main/default/objects/Business_Profile__c/fields/Restricted_Activities__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Activities__c</fullName>
    <description>Indicates if the company engages in any restricted or high-risk activities that may require additional compliance review.</description>
    <label>Restricted Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adult Content</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Money Service Business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sanctioned Goods</fullName>
            </value>
            <value>
                <fullName>Weapons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>