force-app/main/default/objects/Business_Profile__c/fields/Source_of_Wealth_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth_Explanation__c</fullName>
    <description>Detailed explanation of the source of wealth for business owners.</description>
    <label>Source of Wealth - Explanation</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>