force-app/main/default/objects/Business_Profile__c/fields/Source_of_Wealth_for_Owners__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth_for_Owners__c</fullName>
    <description>Source of wealth for the business owners.</description>
    <label>Source of Wealth for Business Owners</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inherited_Wealth</fullName>
                <label>Inherited Wealth</label>
            </value>
            <value>
                <fullName>Investment_Returns</fullName>
                <label>Investment Returns</label>
            </value>
            <value>
                <fullName>Operating_Profits</fullName>
                <label>Operating Profits</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sale_of_Business</fullName>
                <label>Sale of Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>