force-app/main/default/objects/Business_Profile__c/fields/Typical_Value_per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Typical_Value_per_Transaction__c</fullName>
    <description>Typical value per transaction in base currency.</description>
    <label>Typical Value per Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>